--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-class-component": "^7.0.2",
+    "vue-pdf": "^4.0.7",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
