--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "jsonwebtoken": "^8.5.1",
     "moment-timezone": "^0.5.27",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
@@ -20,6 +21,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/moment-timezone": "^0.5.12",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-typescript": "^3.11.0",
