--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,16 @@ jobs:
       - attach_workspace:
           at: .
       - run:
+          name: Send env
+          command: |
+            cat > .env << EOF1
+            VUE_APP_BASE_URL=https://grader.monkeyatc.com/api
+            VUE_APP_DEBUG=false
+            EOF1
+            scp ./.env circleci@grader.monkeyatc.com:/var/www/html
+      - run:
           name: Copy to VM
-          command: scp -r dist circleci@grader.monkeyatc.com:/var/www/html
+          command: scp -r ./dist circleci@grader.monkeyatc.com:/var/www/html
 
 workflows:
   version: 2
