:green_heart: Fix scp command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           at: .
       - run:
           name: Copy to VM
-          command: scp -r ./dist circleci@grader.monkeyatc.com:/var/www/html
+          command: scp -r circleci@grader.monkeyatc.com:/var/www/html ./dist/.
 
 workflows:
   version: 2
